[gd_scene load_steps=3 format=3 uid="uid://dpc8blgkl8am6"]

[ext_resource type="Script" uid="uid://dpt8fm1cvcxvf" path="res://scenes/character_customization/character_customization.gd" id="1_30xwd"]
[ext_resource type="Theme" uid="uid://yiax7h37oyks" path="res://assets/themes/main.tres" id="2_qkfn4"]

[node name="CharacterCustomization" type="Node3D"]
script = ExtResource("1_30xwd")

[node name="ModelHolder" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="ModelHolder"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="ModelHolder"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 186.0
offset_top = 815.0
offset_right = -1319.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 2

[node name="MaleButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qkfn4")
text = "Male"

[node name="FemaleButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qkfn4")
text = "Female"

[node name="ConfirmButton" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qkfn4")
text = "Confirm"

[node name="Main Menu" type="Button" parent="UI"]
offset_right = 226.0
offset_bottom = 63.0
theme = ExtResource("2_qkfn4")
text = "Main Menu"

[connection signal="pressed" from="UI/VBoxContainer/MaleButton" to="." method="_on_male_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/FemaleButton" to="." method="_on_female_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="UI/Main Menu" to="." method="_on_main_menu_pressed"]
